--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container">
+      <h1>Users</h1>
       <div id="users-grid"></div>
     </div>
     <script src="index.js"></script>
